# ams

./: .ai-fs-permissions.yaml  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  typos.toml
.centy/: .centy-manifest.json
.centy/issues/: 01775b58-af41-45f6-bf9a-90a208c37338.md  08abd840-354b-4033-b9f3-ac0f9271b77a.md  0cb44fc2-3b7d-432e-908e-50d066cb0d97.md  0f2d7be8-013c-47f5-b685-cfc6acf927f0.md  0f6a81b3-9e66-4612-af90-a892e0e90c5f.md  182c18b0-92cf-4a05-9b06-7c3168215ec9.md  1c5cfd6b-5515-4821-99f8-aff5c3664aec.md  24ca368d-f993-439e-ae14-5857c5d7a0ff.md  387b0441-a115-4709-8cc4-99e8577eb9fd.md  40c77816-8f31-44eb-b0dd-ac2664cbe259.md  4805e2b6-de7b-4198-a041-3dd3722bd05c.md  4b42aae6-20cf-4d70-acf5-81f2666d4d95.md  4ba9501d-f740-4667-8109-a95b0540036d.md  5664db65-93df-42d7-9e84-0b046c8ef82f.md  830fb8fb-4f71-411f-b3c3-e14073d299cc.md  8364f734-963c-46eb-a5f5-5f1ab4725494.md  96f5ce89-56f8-4450-9b9f-2c110da9a6cf.md  9a2af368-2256-48c2-b1fb-33c58eda36ee.md  a27467aa-4dd8-4e8a-a15d-dd46d22699ea.md  bf78df40-cc53-4717-adfc-e497bc3644e9.md  c69d1ea6-89a0-4ba6-a0a5-91f1b6d3d2cf.md  ccf4f639-090c-447b-86e9-8f65b9220dbb.md  cff3aa6b-bbdc-49fa-8d34-6dc0e34cf1f0.md  da3d3ab9-2c17-4726-80a2-ed349078a944.md  e47825c7-1310-4106-bb96-03455b153ae8.md  f3cfc612-6814-486c-b625-70f9ecc83223.md  fb351e78-abe8-4270-b5f6-7249cc686477.md
.claude/: settings.json
.github/workflows/: coverage.yml  lint.yml
src/: lib.rs  main.rs  session.rs  tmux.rs  tui.rs
