[package]
name = "ams"
version = "0.1.0"
edition = "2021"
description = "Agents Manager Service - Manage AI coding agent tmux sessions"
authors = ["Ofek"]
license = "MIT"
repository = "https://github.com/tupe12334/ams"
keywords = ["tmux", "tui", "cli", "session-manager", "ai-agents"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
thiserror = "1"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }

[package.metadata.husky.hooks]
pre-commit = "typos && cargo fmt -- --check && cargo clippy -- -D warnings"
